--- a/Front-end/TodoList/src/app/components/pages/main-page/main-page.component.html
+++ b/Front-end/TodoList/src/app/components/pages/main-page/main-page.component.html
@@ -1,13 +1,12 @@
 <mat-sidenav-container
   class="example-container">
   <mat-sidenav #sidenav disableClose>
-    <button mat-button (click)="sidenavClose()">Close</button>
-    <app-create-task-drawer></app-create-task-drawer>
+    <app-create-task-drawer (onAddTask)="onAddTask()" [sidenav]="sidenav"></app-create-task-drawer>
   </mat-sidenav>
 
   <mat-sidenav-content>
     <div style="margin: 0 auto; margin-top: 100px; padding-left: 15%; padding-right: 15%">
-      <app-task-table [sidenav]="sidenav"></app-task-table>
+      <app-task-table #taskTable [sidenav]="sidenav"></app-task-table>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
