--- a/Front-end/TodoList/src/app/components/create-task-drawer/create-task-drawer.component.html
+++ b/Front-end/TodoList/src/app/components/create-task-drawer/create-task-drawer.component.html
@@ -2,15 +2,21 @@
   <mat-list-item>
     <h1>Toolbar</h1>
   </mat-list-item>
-  <mat-list-item style="margin-top: 90%">
-    <mat-form-field class="example-full-width" style="min-width: 300px">
-      <textarea [(ngModel)]="Text" matInput placeholder="Text" style="height: 500px"></textarea>
-    </mat-form-field>
-  </mat-list-item>
-  <mat-list-item style="position: absolute; left: 0; bottom: 0; width: 100%; height: 80px;">
-    <div>
-      <button mat-raised-button color="warn" [disabled]="TaskList.length === 0 ? true : false" (click)="sidenavClose()">Cansle</button>
-      <button mat-raised-button color="primary"[disabled]="Text.length === 0 ? true : false" (click)="addTask()" style="margin-left: 5px">Add</button>
-    </div>
-  </mat-list-item>
+  <div *ngIf="!Loading">
+    <mat-list-item style="margin-top: 90%">
+      <mat-form-field class="example-full-width" style="min-width: 300px">
+        <textarea [(ngModel)]="Text" matInput placeholder="Text" style="height: 500px"></textarea>
+      </mat-form-field>
+    </mat-list-item>
+    <mat-list-item style="position: absolute; left: 0; bottom: 0; width: 100%; height: 80px;">
+      <div>
+        <button mat-raised-button color="warn" [disabled]="TaskList.length === 0 ? true : false" (click)="sidenavClose()">Cansle</button>
+        <button mat-raised-button color="primary" [disabled]="Text.length === 0 ? true : false" (click)="addTask()" style="margin-left: 5px">Add</button>
+      </div>
+    </mat-list-item>
+  </div>
+  <div *ngIf="Loading" class="d-flex justify-content-center" style="margin-top: 100px; min-width: 300px">
+    <mat-spinner></mat-spinner>
+    <h3>Wait</h3>
+  </div>
 </mat-list>
