--- a/Front-end/TodoList/src/app/components/task-table/task-table.component.html
+++ b/Front-end/TodoList/src/app/components/task-table/task-table.component.html
@@ -1,13 +1,52 @@
 <button  mat-raised-button (click)="sidenavOpen()"> Create New Task </button>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z19" style="width: 100%; height: 100%;">
+<mat-table [dataSource]="dataSource" matSort #sortSubs="matSort">
 
-  <ng-container [matColumnDef]="column" *ngFor="let column of columnsToDisplay">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+  <ng-container matColumnDef="id">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> # </mat-header-cell>
+    <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+  <ng-container matColumnDef="text">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Text </mat-header-cell>
+    <mat-cell *matCellDef="let row" (mouseenter)="onMouseenter(row)" (mouseleave)="onMouseleave()">
+      {{row.text}}
+      <div *ngIf="editID === row.id">
+        <button matTooltip="Edit" mat-icon-button (click)="EditTask(row)">
+          <mat-icon style="color: rgb(35, 35, 161)">edit</mat-icon>
+        </button>
+      </div>
+    </mat-cell>
+  </ng-container>
 
-</table>
+  <ng-container matColumnDef="created">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> Created </mat-header-cell>
+    <mat-cell *matCellDef="let row" style="margin-left: 10px;"> {{row.created}} </mat-cell>
+  </ng-container>
+
+  <!--<ng-container matColumnDef="edit">-->
+    <!--<mat-header-cell *matHeaderCellDef></mat-header-cell>-->
+    <!--<mat-cell *matCellDef="let row">-->
+      <!--<button matTooltip="Edit" mat-icon-button (click)="EditTask(row)">-->
+        <!--<mat-icon style="color: rgb(35, 35, 161)">edit</mat-icon>-->
+      <!--</button>-->
+    <!--</mat-cell>-->
+  <!--</ng-container>-->
+
+  <ng-container matColumnDef="remove">
+    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+    <mat-cell *matCellDef="let row">
+      <ng-container>
+        <button matTooltip="Remove" mat-icon-button (click)="RemoveTask(row)">
+          <mat-icon style="color: red">close</mat-icon>
+        </button>
+      </ng-container>
+    </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
+  <mat-row matRipple class="element-row"
+           *matRowDef="let row; columns: columnsToDisplay;"></mat-row>
+</mat-table>
+
+<mat-paginator #paginatorSubs [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="10"></mat-paginator>
